✨ Converted DocAssemblerService to use Rest Client